Correct spacing in message

--- a/style.css
+++ b/style.css
@@ -245,23 +245,23 @@ input:hover {
 }
 
 .message {
-    width: 45%;
-    min-height: 8%;
+    width: 48%;
     display: flex;
     justify-content: space-between;
     border-radius: 10px;
     margin: 3px 0;
-    padding: 3px 5px;
+    padding: 5px;
 }
 
 .message .text {
+    max-width: 70%;
     align-self: center;
     font-size: 12px;
 }
 
 .message .date {
     align-self: flex-end;
-    font-size: 8px;
+    font-size: 7px;
 }
 
 .chat-container .sent {
